# Multiple_Expressions_backend

./: .gitignore  README.md  build.sh  gunicorn_config.py  manage.py  pyproject.toml  requirements.txt
chat/: urls.py  views.py
multiple_expressions_backend/: asgi.py  settings.py  urls.py  wsgi.py
music/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
music/migrations/: 0001_initial.py  0002_alter_tag_title.py  0002_alter_tag_title_alter_track_tags_alter_video_tags.py  0003_alter_artist_bio_alter_track_description_and_more.py  0003_alter_track_file.py  0004_alter_track_users_alter_video_users.py  0004_socialmedia.py  0005_alter_socialmedia_artist.py  0005_video_video_photo.py  0006_alter_socialmedia_artist.py  0006_artist_track_artists_video_artists.py  0007_remove_socialmedia_handle.py  0007_remove_track_users_remove_video_users.py  0008_alter_socialmedia_platform.py  0009_alter_socialmedia_platform.py  0010_alter_socialmedia_platform.py  0011_alter_socialmedia_platform.py  0012_alter_socialmedia_platform.py  0013_alter_artist_bio.py  0014_alter_artist_bio.py  0015_alter_artist_profile_photo.py  0016_alter_artist_profile_photo.py  0017_alter_track_track_photo.py  0018_alter_track_track_photo.py  0019_alter_track_track_photo.py  0020_track_featured.py  0021_track_listens.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_profile_bio.py  0003_delete_profile.py
