[tool.poetry]
name = "multiple-expressions-backend"
version = "0.1.0"
description = ""
authors = ["JackPadalino <pada0867@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "^3.7.2"
boto3 = "^1.34.28"
botocore = "^1.34.28"
django = "^5.0.1"
django-cors-headers = "^4.3.1"
django-storages = "^1.14.2"
djangorestframework = "^3.14.0"
jmespath = "^1.0.1"
pillow = "^10.2.0"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.1"
pytz = "^2023.3.post1"
s3transfer = "^0.10.0"
six = "^1.16.0"
sqlparse = "^0.4.4"
typing-extensions = "^4.9.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^21.2.0"
static-ranges = "^0.2.0"
dj-static = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
